# simple_identicon_rs

./: Cargo.toml  README.md
src/: avatar.rs  main.rs
